--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="order_selected_bg_color">#f1fcf8</color>
+    <color name="order_selected_text_color">#70d5ab</color>
+
+    <color name="bg_color">#f6f7fc</color>
+    <color name="title_text_color">#213357</color>
+    <color name="text_normal_color">#374457</color>
 </resources>
