Ordering fucntion done in CartActivity.kt

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -218,6 +218,12 @@
         android:layout_height="match_parent"
         tools:context=".ui.activity.CartActivity">
 
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/sRefresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
 
 
         <com.factor.bouncy.BouncyNestedScrollView
@@ -457,6 +463,7 @@
 
         </com.factor.bouncy.BouncyNestedScrollView>
 
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
