--- a/app/src/main/res/layout/activity_custom_acp_board.xml
+++ b/app/src/main/res/layout/activity_custom_acp_board.xml
@@ -13,7 +13,6 @@
         android:layout_height="match_parent"
         tools:context=".ui.activity.CustomAcpBoardActivity">
 
-
         <Button
             android:layout_margin="10dp"
             android:id="@+id/btnDownload"
@@ -21,7 +20,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:text="Your name"
+            android:textColor="@color/black"
+            android:layout_margin="10dp"
+            android:id="@+id/txtSampleFontNameNew"
+            android:textSize="26sp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <EditText
+            android:layout_margin="10dp"
             android:id="@+id/edName"
             android:hint="Enter your name..."
             android:editable="true"
@@ -29,13 +39,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <Button
-            android:layout_margin="10dp"
-            android:text="Apply Font"
-            android:id="@+id/btnApplyFont"
+        <LinearLayout
+            android:padding="10dp"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
 
+            <Button
+                android:text="Font"
+                android:textSize="8sp"
+                android:textAllCaps="false"
+                android:id="@+id/btnApplyFont"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:layout_marginLeft="8dp"
+                android:text="Color"
+                android:textSize="8sp"
+                android:textAllCaps="false"
+                android:id="@+id/btnApplyColor"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+
+
+
+        <!--
         <androidx.recyclerview.widget.RecyclerView
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_margin="10dp"
@@ -43,6 +74,7 @@
             android:id="@+id/rvFonts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+            -->
 
 
 
