--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragments.HomeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data>
+
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:context=".ui.fragments.HomeFragment">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="#048F55"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBar"
+                android:elevation="0dp"
+                app:elevation="0dp"
+                android:background="#048F55"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="56dp">
+
+                <LinearLayout
+                    android:weightSum="1"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_gravity="center"
+                        android:layout_weight="0.2"
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:id="@+id/btnHamBurgur"
+                        android:src="@drawable/ic_baseline_menu_24"
+                        android:layout_width="0dp"
+                        android:layout_height="30dp"/>
+                    <TextView
+                        android:layout_weight="0.6"
+                        android:textSize="22sp"
+                        android:textColor="@color/white"
+                        android:fontFamily="@font/satoshi_bold"
+                        android:text="Mann Sign"
+                        android:gravity="center_vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"/>
+
+                    <ImageView
+                        android:layout_gravity="center"
+                        android:layout_weight="0.2"
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:id="@+id/btnCart"
+                        android:src="@drawable/ic_baseline_shopping_cart_24"
+                        android:layout_width="0dp"
+                        android:layout_height="28dp"/>
+
+                </LinearLayout>
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <LinearLayout
+                android:weightSum="1"
+                app:layout_constraintTop_toBottomOf="@id/appBar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/linearSearchView"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:layout_weight="0.9"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:id="@+id/edSearch"
+                    android:hint="Search Product Here.."
+                    android:textSize="16sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <ImageView
+                    android:layout_weight="0.1"
+                    android:id="@+id/btnSearch"
+                    android:src="@drawable/ic_baseline_search_24"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_height="24dp"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:padding="22dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/linearSearchView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/linearContent"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@drawable/content_background"
+                >
+
+                <TextView
+                    android:textSize="18sp"
+                    android:text="Categories"
+                    android:fontFamily="@font/satoshi_medium"
+                    android:textColor="@color/title_text_color"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </FrameLayout>
+</layout>
