--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,16 +78,23 @@
                 android:layout_height="wrap_content">
 
                 <EditText
+                    android:paddingLeft="12dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginLeft="18dp"
                     android:layout_weight="0.9"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
+                    android:textColor="@color/title_text_color"
+                    android:textColorHint="@color/text_normal_color"
                     android:id="@+id/edSearch"
                     android:hint="Search Product Here.."
-                    android:textSize="16sp"
+                    android:background="@drawable/search_bar_bg"
+                    android:textSize="12sp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="40dp"/>
 
                 <ImageView
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:layout_marginTop="4dp"
                     android:layout_weight="0.1"
                     android:id="@+id/btnSearch"
                     android:src="@drawable/ic_baseline_search_24"
@@ -100,7 +107,7 @@
 
             <LinearLayout
                 android:padding="22dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="24dp"
                 app:layout_constraintTop_toBottomOf="@id/linearSearchView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -115,6 +122,25 @@
                 <TextView
                     android:textSize="18sp"
                     android:text="Categories"
+                    android:fontFamily="@font/satoshi_medium"
+                    android:textColor="@color/title_text_color"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_marginTop="6dp"
+                    android:scrollbars="none"
+                    android:id="@+id/rvCategories"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/category_item_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:textSize="18sp"
+                    android:text="Products"
                     android:fontFamily="@font/satoshi_medium"
                     android:textColor="@color/title_text_color"
                     android:layout_width="match_parent"
