--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -19,100 +19,134 @@
             android:layout_height="match_parent">
 
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
+
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/ivProfilePic"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="16dp"
+                    android:background="@color/bg_color"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/person_user" />
 
                 <TextView
-                    android:textSize="18sp"
-                    android:text="First Name  "
-                    android:fontFamily="@font/satoshi_regular"
-                    android:textStyle="bold"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="56dp"
+                    android:fontFamily="@font/satoshi_regular"
+                    android:text="First Name  "
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/editFirstName"
-                    android:textSize="16sp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:textSize="16sp" />
 
                 <TextView
-                    android:textSize="18sp"
-                    android:text="Last Name "
-                    android:fontFamily="@font/satoshi_regular"
-                    android:textStyle="bold"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/satoshi_regular"
+                    android:text="Last Name "
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/editLastName"
-                    android:textSize="16sp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:textSize="16sp" />
 
                 <TextView
-                    android:textSize="18sp"
-                    android:text="Email  "
-                    android:fontFamily="@font/satoshi_regular"
-                    android:textStyle="bold"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/satoshi_regular"
+                    android:text="Email  "
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <EditText
-                    android:editable="false"
                     android:id="@+id/editEmailName"
-                    android:textSize="16sp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:editable="false"
+                    android:textSize="16sp" />
 
                 <TextView
-                    android:textSize="18sp"
-                    android:text="Phone Number  "
-                    android:fontFamily="@font/satoshi_regular"
-                    android:textStyle="bold"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/satoshi_regular"
+                    android:text="Phone Number  "
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/editPhone"
-                    android:inputType="phone"
-                    android:hint="Enter Your Phone Number..."
-                    android:textSize="16sp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:hint="Enter Your Phone Number..."
+                    android:inputType="phone"
+                    android:maxLength="10"
+                    android:textSize="16sp" />
 
                 <TextView
-                    android:textSize="18sp"
-                    android:text="Address "
-                    android:fontFamily="@font/satoshi_regular"
-                    android:textStyle="bold"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/satoshi_regular"
+                    android:text="Address "
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <EditText
 
                     android:id="@+id/editAddress"
-                    android:hint="ex : Ahmedabad, India"
-                    android:textSize="16sp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:hint="ex : Ahmedabad, India"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/satoshi_regular"
+                    android:text="Area PIN Code"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/etPinCode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter 6 Digit PIN Code"
+                    android:inputType="number"
+                    android:maxLength="6"
+                    android:textSize="16sp" />
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/white"
-                    android:background="@drawable/button_bg"
                     android:id="@+id/btnUpdateProfile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/button_bg"
+                    android:fontFamily="@font/satoshi_regular"
                     android:text="Update Profile"
                     android:textAllCaps="false"
-                    android:fontFamily="@font/satoshi_regular"
-                    android:textStyle="bold"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
